Use 'implements Construct' instead of 'extends AbstractConstruct' where possible